--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -3,7 +3,7 @@ env:
   DOCKER_USER: ${{secrets.DOCKER_HUB_USER}}
   DOCKER_PASSWORD: ${{secrets.DOCKER_HUB_TOKEN}}
   DOCKER_REPOSITORY: class-docker-app
-  NODE_IMAGE_TAG: nodejs-app-
+  NODE_IMAGE_TAG: nodejs-app-1
 
 on:
   push:
