--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -3,15 +3,14 @@ env:
   DOCKER_USER: ${{secrets.DOCKER_HUB_USER}}
   DOCKER_PASSWORD: ${{secrets.DOCKER_HUB_TOKEN}}
   DOCKER_REPOSITORY: class-docker-app
-  NODE_IMAGE_TAG: nodejs-app-1
-
+  NODE_IMAGE_TAG: nodejs-app-v1
 on:
   push:
     branches: [ main ]
   
 jobs:
   
-  build-scan-push:
+  build-scan-protect:
     
     name: Build and Scan Docker Images
     runs-on: ubuntu-latest
@@ -28,9 +27,10 @@ jobs:
       uses: crazy-max/ghaction-container-scan@v3
       with: 
         image: ${{env.DOCKER_USER}}/${{env.DOCKER_REPOSITORY}}:${{env.NODE_IMAGE_TAG}}
+        severity : CRITICAL
+        severity_threshold: CRITICAL
         annotations: true
-        Severity: CRITICAL
-
+       
     - name: Push Image to Docker Hub    
       run: |
         docker login -u ${{env.DOCKER_USER}} -p ${{env.DOCKER_PASSWORD}}
